[gd_scene load_steps=18 format=4 uid="uid://cc5hn5aulatdh"]

[ext_resource type="Script" path="res://TurnBattle/scripts/battle_scene/battle_scene.gd" id="1_k7x86"]
[ext_resource type="PackedScene" uid="uid://cm3x6yjwg0wql" path="res://TurnBattle/scenes/enemy_button.tscn" id="2_q2h2f"]
[ext_resource type="Resource" uid="uid://nvgog6nm6iwk" path="res://TurnBattle/resources/players/wizard.tres" id="3_1xfr0"]
[ext_resource type="Resource" uid="uid://cekiqrspd7cac" path="res://TurnBattle/resources/players/rogue.tres" id="4_74e8g"]
[ext_resource type="PackedScene" uid="uid://bufo3fo4lgsaf" path="res://TurnBattle/scenes/action_selection_container.tscn" id="6_llh1y"]
[ext_resource type="Resource" uid="uid://7ih7gc3t84wx" path="res://TurnBattle/resources/enemies/gorgon.tres" id="6_wea8f"]
[ext_resource type="Resource" uid="uid://bvxs1xxvh8xti" path="res://TurnBattle/resources/enemies/cyclops.tres" id="7_6ucfx"]
[ext_resource type="Resource" uid="uid://04yeqcjf71k8" path="res://TurnBattle/resources/players/knight.tres" id="7_c3ipe"]
[ext_resource type="Script" path="res://Grid-Movement/Resources/GridManager.gd" id="7_tjiub"]
[ext_resource type="Script" path="res://Grid-Movement/Resources/PathFinding.gd" id="8_nl3bw"]
[ext_resource type="Resource" uid="uid://c4uy71mwhxin" path="res://TurnBattle/resources/enemies/kraken.tres" id="8_qg17s"]
[ext_resource type="Script" path="res://Grid-Movement/Resources/TileMapLayer.gd" id="9_tjiub"]
[ext_resource type="PackedScene" uid="uid://cguk7p8fnv2ra" path="res://TurnBattle/scenes/character.tscn" id="9_y7v6u"]
[ext_resource type="TileSet" uid="uid://epicx2i3owex" path="res://TurnBattle/resources/map_tileset.tres" id="12_hp3cp"]
[ext_resource type="PackedScene" uid="uid://cmaes8al2b5cc" path="res://PauseMenu/PauseMenu_Battle.tscn" id="15_fb2m3"]
[ext_resource type="AudioStream" uid="uid://dvxhydds5mx3c" path="res://assets/music/Counterattack_XC2.ogg" id="16_ayajf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sryic"]
bg_color = Color(0, 0, 0, 0.513726)

[node name="BattleScene" type="Node2D" node_paths=PackedStringArray("player_group", "enemy_group", "timeline")]
scale = Vector2(1, 0.98719)
script = ExtResource("1_k7x86")
player_group = NodePath("Players")
enemy_group = NodePath("Enemies")
timeline = NodePath("UI/TurnOrderPanel/TurnOrderContainer/Timeline")
enemy_button = ExtResource("2_q2h2f")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TurnOrderPanel" type="PanelContainer" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -258.0
offset_right = 258.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="TurnOrderContainer" type="VBoxContainer" parent="UI/TurnOrderPanel"]
layout_mode = 2

[node name="Timeline" type="HBoxContainer" parent="UI/TurnOrderPanel/TurnOrderContainer"]
layout_mode = 2

[node name="TimelineSlot" type="Panel" parent="UI/TurnOrderPanel/TurnOrderContainer/Timeline"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/TurnOrderPanel/TurnOrderContainer/Timeline/TimelineSlot"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1
stretch_mode = 4

[node name="TimelineSlot2" type="Panel" parent="UI/TurnOrderPanel/TurnOrderContainer/Timeline"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/TurnOrderPanel/TurnOrderContainer/Timeline/TimelineSlot2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1
stretch_mode = 4

[node name="TimelineSlot3" type="Panel" parent="UI/TurnOrderPanel/TurnOrderContainer/Timeline"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/TurnOrderPanel/TurnOrderContainer/Timeline/TimelineSlot3"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1
stretch_mode = 4

[node name="TimelineSlot4" type="Panel" parent="UI/TurnOrderPanel/TurnOrderContainer/Timeline"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/TurnOrderPanel/TurnOrderContainer/Timeline/TimelineSlot4"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1
stretch_mode = 4

[node name="TimelineSlot5" type="Panel" parent="UI/TurnOrderPanel/TurnOrderContainer/Timeline"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/TurnOrderPanel/TurnOrderContainer/Timeline/TimelineSlot5"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1
stretch_mode = 4

[node name="TurnOrderLabel" type="Label" parent="UI/TurnOrderPanel/TurnOrderContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 24
text = "Turn Order"

[node name="ActionLog" type="Label" parent="UI"]
visible = false
custom_minimum_size = Vector2(200, 0)
offset_left = 528.0
offset_top = 730.0
offset_right = 728.0
offset_bottom = 753.0
theme_override_styles/normal = SubResource("StyleBoxFlat_sryic")
text = "log"
autowrap_mode = 3

[node name="ActionSelectionContainer" parent="UI" instance=ExtResource("6_llh1y")]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -71.0
offset_top = -79.0
offset_right = -31.0
offset_bottom = -39.0
grow_horizontal = 0
grow_vertical = 0

[node name="GridManager" type="Node2D" parent="." node_paths=PackedStringArray("tile_map", "pathfinder", "overlay_container")]
script = ExtResource("7_tjiub")
tile_map = NodePath("../TileMapLayer")
pathfinder = NodePath("../PathFinding")
overlay_container = NodePath("../OverlayContainer")
metadata/_custom_type_script = "uid://0ca101ytw440"

[node name="TileMapLayer" type="TileMapLayer" parent="." node_paths=PackedStringArray("grid_manager")]
show_behind_parent = true
visibility_layer = 2
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAIAAAAAAAIAAAAAAAMAAAAAAAIAAAAAAAQAAAAAAAIAAAAAAAUAAAAAAAIAAAAAAAYAAAAAAAIAAAAAAAcAAAAAAAIAAAAAAAgAAAAAAAIAAAAAAAkAAAAAAAIAAAAAAAoAAAAAAAIAAAABAAAAAAABAAEAAAABAAEAAAABAAIAAAABAAIAAAABAAIAAAABAAMAAAABAAIAAAABAAQAAAAEAAIAAAABAAUAAAAEAAMAAAABAAYAAAABAAIAAAABAAcAAAABAAIAAAABAAgAAAABAAIAAAABAAkAAAABAAIAAAABAAoAAAABAAIAAAACAAAAAAABAAEAAAACAAEAAAABAAIAAAACAAIAAAABAAIAAAACAAMAAAABAAIAAAACAAQAAAAFAAIAAAACAAUAAAAFAAMAAAACAAYAAAABAAIAAAACAAcAAAABAAIAAAACAAgAAAABAAIAAAACAAkAAAABAAIAAAACAAoAAAABAAIAAAADAAAAAAABAAEAAAADAAEAAAABAAIAAAADAAIAAAABAAIAAAADAAMAAAABAAIAAAADAAQAAAABAAIAAAADAAUAAAABAAIAAAADAAYAAAABAAIAAAADAAcAAAABAAIAAAADAAgAAAABAAIAAAADAAkAAAABAAIAAAADAAoAAAABAAIAAAAEAAAAAAABAAEAAAAEAAEAAAABAAIAAAAEAAIAAAABAAIAAAAEAAMAAAABAAIAAAAEAAQAAAABAAIAAAAEAAUAAAABAAIAAAAEAAYAAAABAAIAAAAEAAcAAAABAAIAAAAEAAgAAAABAAIAAAAEAAkAAAABAAIAAAAEAAoAAAABAAIAAAAFAAAAAAABAAEAAAAFAAEAAAABAAIAAAAFAAIAAAABAAIAAAAFAAMAAAABAAIAAAAFAAQAAAABAAIAAAAFAAUAAAABAAIAAAAFAAYAAAABAAIAAAAFAAcAAAABAAIAAAAFAAgAAAABAAIAAAAFAAkAAAABAAIAAAAFAAoAAAABAAIAAAAGAAAAAAABAAEAAAAGAAEAAAABAAIAAAAGAAIAAAABAAIAAAAGAAMAAAABAAIAAAAGAAQAAAABAAIAAAAGAAUAAAABAAIAAAAGAAYAAAABAAIAAAAGAAcAAAABAAIAAAAGAAgAAAABAAIAAAAGAAkAAAABAAIAAAAGAAoAAAABAAIAAAAHAAAAAAABAAEAAAAHAAEAAAABAAIAAAAHAAIAAAABAAIAAAAHAAMAAAABAAIAAAAHAAQAAAABAAIAAAAHAAUAAAABAAIAAAAHAAYAAAADAAAAAAAHAAcAAAABAAIAAAAHAAgAAAABAAIAAAAHAAkAAAABAAIAAAAHAAoAAAABAAIAAAAIAAAAAAABAAEAAAAIAAEAAAABAAIAAAAIAAIAAAABAAIAAAAIAAMAAAABAAIAAAAIAAQAAAABAAIAAAAIAAUAAAABAAIAAAAIAAYAAAABAAIAAAAIAAcAAAABAAIAAAAIAAgAAAABAAIAAAAIAAkAAAABAAIAAAAIAAoAAAABAAIAAAAJAAAAAAABAAEAAAAJAAEAAAABAAIAAAAJAAIAAAABAAIAAAAJAAMAAAABAAIAAAAJAAQAAAABAAIAAAAJAAUAAAABAAIAAAAJAAYAAAABAAIAAAAJAAcAAAABAAIAAAAJAAgAAAABAAIAAAAJAAkAAAABAAIAAAAJAAoAAAABAAIAAAAKAAAAAAABAAEAAAAKAAEAAAABAAIAAAAKAAIAAAABAAIAAAAKAAMAAAABAAIAAAAKAAQAAAABAAIAAAAKAAUAAAABAAIAAAAKAAYAAAABAAIAAAAKAAcAAAABAAIAAAAKAAgAAAABAAIAAAAKAAkAAAABAAIAAAAKAAoAAAABAAIAAAALAAAAAAABAAEAAAALAAEAAAABAAIAAAALAAIAAAABAAIAAAALAAMAAAABAAIAAAALAAQAAAABAAIAAAALAAUAAAABAAIAAAALAAYAAAABAAIAAAALAAcAAAABAAIAAAALAAgAAAADAAAAAAALAAkAAAABAAIAAAALAAoAAAABAAIAAAAMAAAAAAABAAEAAAAMAAEAAAABAAIAAAAMAAIAAAABAAIAAAAMAAMAAAABAAIAAAAMAAQAAAABAAIAAAAMAAUAAAABAAIAAAAMAAYAAAABAAIAAAAMAAcAAAABAAIAAAAMAAgAAAABAAIAAAAMAAkAAAABAAIAAAAMAAoAAAABAAIAAAANAAAAAAABAAEAAAANAAEAAAABAAIAAAANAAIAAAABAAIAAAANAAMAAAABAAIAAAANAAQAAAADAAAAAAANAAUAAAABAAIAAAANAAYAAAABAAIAAAANAAcAAAABAAIAAAANAAgAAAABAAIAAAANAAkAAAABAAIAAAANAAoAAAABAAIAAAAOAAAAAAABAAEAAAAOAAEAAAABAAIAAAAOAAIAAAABAAIAAAAOAAMAAAABAAIAAAAOAAQAAAABAAIAAAAOAAUAAAABAAIAAAAOAAYAAAAEAAIAAAAOAAcAAAAEAAMAAAAOAAgAAAABAAIAAAAOAAkAAAABAAIAAAAOAAoAAAABAAIAAAAPAAAAAAABAAEAAAAPAAEAAAABAAIAAAAPAAIAAAABAAIAAAAPAAMAAAABAAIAAAAPAAQAAAABAAIAAAAPAAUAAAABAAIAAAAPAAYAAAAFAAIAAAAPAAcAAAAFAAMAAAAPAAgAAAABAAIAAAAPAAkAAAABAAIAAAAPAAoAAAABAAIAAAAQAAAAAAABAAEAAAAQAAEAAAABAAIAAAAQAAIAAAABAAIAAAAQAAMAAAABAAIAAAAQAAQAAAABAAIAAAAQAAUAAAABAAIAAAAQAAYAAAABAAIAAAAQAAcAAAABAAIAAAAQAAgAAAABAAIAAAAQAAkAAAABAAIAAAAQAAoAAAABAAIAAAARAAAAAAABAAEAAAARAAEAAAABAAIAAAARAAIAAAABAAIAAAARAAMAAAADAAAAAAARAAQAAAABAAIAAAARAAUAAAABAAIAAAARAAYAAAABAAIAAAARAAcAAAABAAIAAAARAAgAAAABAAIAAAARAAkAAAABAAIAAAARAAoAAAABAAIAAAASAAAAAAABAAEAAAASAAEAAAABAAIAAAASAAIAAAABAAIAAAASAAMAAAABAAIAAAASAAQAAAABAAIAAAASAAUAAAABAAIAAAASAAYAAAABAAIAAAASAAcAAAABAAIAAAASAAgAAAABAAIAAAASAAkAAAABAAIAAAASAAoAAAABAAIAAAATAAAAAAABAAEAAAATAAEAAAABAAIAAAATAAIAAAABAAIAAAATAAMAAAABAAIAAAATAAQAAAABAAIAAAATAAUAAAABAAIAAAATAAYAAAABAAIAAAATAAcAAAABAAIAAAATAAgAAAABAAIAAAATAAkAAAABAAIAAAATAAoAAAABAAIAAAAUAAAAAAABAAEAAAAUAAEAAAABAAIAAAAUAAIAAAABAAIAAAAUAAMAAAABAAIAAAAUAAQAAAABAAIAAAAUAAUAAAABAAIAAAAUAAYAAAABAAIAAAAUAAcAAAABAAIAAAAUAAgAAAABAAIAAAAUAAkAAAABAAIAAAAUAAoAAAABAAIAAAAVAAAAAAABAAEAAAAVAAEAAAABAAIAAAAVAAIAAAABAAIAAAAVAAMAAAABAAIAAAAVAAQAAAABAAIAAAAVAAUAAAABAAIAAAAVAAYAAAABAAIAAAAVAAcAAAABAAIAAAAVAAgAAAAEAAIAAAAVAAkAAAAEAAMAAAAVAAoAAAABAAIAAAAWAAAAAAABAAEAAAAWAAEAAAABAAIAAAAWAAIAAAABAAIAAAAWAAMAAAABAAIAAAAWAAQAAAABAAIAAAAWAAUAAAABAAIAAAAWAAYAAAABAAIAAAAWAAcAAAABAAIAAAAWAAgAAAAFAAIAAAAWAAkAAAAFAAMAAAAWAAoAAAABAAIAAAAXAAAAAAACAAEAAAAXAAEAAAACAAIAAAAXAAIAAAACAAIAAAAXAAMAAAACAAIAAAAXAAQAAAACAAIAAAAXAAUAAAACAAIAAAAXAAYAAAACAAIAAAAXAAcAAAACAAIAAAAXAAgAAAACAAIAAAAXAAkAAAACAAIAAAAXAAoAAAACAAIAAAAAAAsAAAAAAAMAAAABAAsAAAABAAMAAAACAAsAAAABAAMAAAADAAsAAAABAAMAAAAEAAsAAAABAAMAAAAFAAsAAAABAAMAAAAGAAsAAAABAAMAAAAHAAsAAAABAAMAAAAIAAsAAAABAAMAAAAJAAsAAAABAAMAAAAKAAsAAAABAAMAAAALAAsAAAABAAMAAAAMAAsAAAABAAMAAAANAAsAAAABAAMAAAAOAAsAAAABAAMAAAAPAAsAAAABAAMAAAAQAAsAAAABAAMAAAARAAsAAAABAAMAAAASAAsAAAABAAMAAAATAAsAAAABAAMAAAAUAAsAAAABAAMAAAAVAAsAAAABAAMAAAAWAAsAAAABAAMAAAAXAAsAAAACAAMAAAA=")
tile_set = ExtResource("12_hp3cp")
script = ExtResource("9_tjiub")
grid_manager = NodePath("../GridManager")

[node name="PathFinding" type="Node2D" parent="." node_paths=PackedStringArray("grid_manager")]
script = ExtResource("8_nl3bw")
grid_manager = NodePath("../GridManager")

[node name="OverlayContainer" type="Node2D" parent="."]

[node name="Players" type="Node2D" parent="."]

[node name="Player1" parent="Players" node_paths=PackedStringArray("pathfinder", "grid_manager") groups=["player_units"] instance=ExtResource("9_y7v6u")]
position = Vector2(1340, 271.478)
character_stats = ExtResource("7_c3ipe")
pathfinder = NodePath("../../PathFinding")
grid_manager = NodePath("../../GridManager")
move_range = 5
attack_range = 5

[node name="Player2" parent="Players" node_paths=PackedStringArray("pathfinder", "grid_manager") groups=["player_units"] instance=ExtResource("9_y7v6u")]
position = Vector2(1253, 435.58)
character_stats = ExtResource("4_74e8g")
pathfinder = NodePath("../../PathFinding")
grid_manager = NodePath("../../GridManager")
move_range = 5
attack_range = 5

[node name="Player3" parent="Players" node_paths=PackedStringArray("pathfinder", "grid_manager") groups=["player_units"] instance=ExtResource("9_y7v6u")]
position = Vector2(1321, 671.603)
character_stats = ExtResource("3_1xfr0")
pathfinder = NodePath("../../PathFinding")
grid_manager = NodePath("../../GridManager")
move_range = 5
attack_range = 5

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy" parent="Enemies" node_paths=PackedStringArray("pathfinder", "grid_manager") groups=["enemy_units"] instance=ExtResource("9_y7v6u")]
position = Vector2(535, 423.424)
character_stats = ExtResource("7_6ucfx")
pathfinder = NodePath("../../PathFinding")
grid_manager = NodePath("../../GridManager")
attack_range = 5

[node name="Enemy2" parent="Enemies" node_paths=PackedStringArray("pathfinder", "grid_manager") groups=["enemy_units"] instance=ExtResource("9_y7v6u")]
position = Vector2(281, 348.464)
character_stats = ExtResource("6_wea8f")
pathfinder = NodePath("../../PathFinding")
grid_manager = NodePath("../../GridManager")
attack_range = 5

[node name="Enemy3" parent="Enemies" node_paths=PackedStringArray("pathfinder", "grid_manager") groups=["enemy_units"] instance=ExtResource("9_y7v6u")]
position = Vector2(363, 587.526)
character_stats = ExtResource("8_qg17s")
pathfinder = NodePath("../../PathFinding")
grid_manager = NodePath("../../GridManager")
attack_range = 5

[node name="PauseMenu_Battle" parent="." instance=ExtResource("15_fb2m3")]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_ayajf")
autoplay = true

[connection signal="attack_selected" from="UI/ActionSelectionContainer" to="." method="_on_action_selection_container_attack_selected"]
[connection signal="end_turn_selected" from="UI/ActionSelectionContainer" to="." method="_on_action_selection_container_end_turn_selected"]
[connection signal="move_selected" from="UI/ActionSelectionContainer" to="." method="_on_action_selection_container_move_selected"]
